Bug Fix Bug on small devices relating to the mountain.svg. Now fixed!

--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -36,7 +36,7 @@ h1, h2, h3, h4, h5, h6 {
   background-repeat: no-repeat;
   background-attachment: fixed;
   margin: 0;
-  min-height: 600px;
+  min-height: 300px;
   height: 100%;
 }
 
